Fixing desktop logo spacing

--- a/css/style-red.css
+++ b/css/style-red.css
@@ -227,6 +227,9 @@ img
 {
     max-width: 100%;
 }
+#logo-desktop {
+    margin-left: 8px;
+}
 @font-face {
   font-family: 'SocialGlyphs';
   src: url('../fonts/socialglyphs-webfont.eot');
